compiler/testData/asJava/lightClasses/compilationErrors/JvmPackageName.kt
// a.b.c.JvmPackageNameKt
@file:JvmPackageName("a.b.c")
package p

fun f() {

}